macro(make_cxx_test name)
	add_executable(check_ascii_${name} check_ascii_${name}.cxx)
	target_link_libraries(check_ascii_${name} clane-check)
	add_test(ascii_${name} ./check_ascii_${name})
endmacro()

make_cxx_test(has_prefix)
make_cxx_test(hexch_to_int)
make_cxx_test(icase_compare)
make_cxx_test(int_to_hexch)
