macro(make_cxx_test name)
	add_executable(check_uri_${name} check_uri_${name}.cpp)
	target_link_libraries(check_uri_${name} clane-uri)
	add_test(uri_${name} ./check_uri_${name})
endmacro()

make_cxx_test(is_fragment)
make_cxx_test(is_ipv4_address)
make_cxx_test(is_ipv6_address)
make_cxx_test(is_ipvfut_address)
make_cxx_test(is_ls32)
make_cxx_test(is_path)
make_cxx_test(is_percent_encoded)
make_cxx_test(is_port)
make_cxx_test(is_query)
make_cxx_test(is_reg_name)
make_cxx_test(is_scheme)
make_cxx_test(is_user_info)
make_cxx_test(percent_decode)
make_cxx_test(percent_encode)
make_cxx_test(remove_dot_segments)
make_cxx_test(remove_empty_segments)
make_cxx_test(remove_last_path_segment)
make_cxx_test(to_string)
make_cxx_test(validate)
